# raceline_editor

./: LICENSE.md  README.md  pyproject.toml
example_trajectories/: blue.csv
raceline_editor/raceline/: importer.py  models.py  processing.py
raceline_editor/renderer/: main_window.py
scripts/: run_gui.py
